--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700;900&display=swap" rel="stylesheet"> 
+
     <link rel="stylesheet" href="./src/index.css">
 
     <title>Library Search</title>
   </head>
-  <body>
+  <body style="background-color: rgb(23, 23, 23); height: 100vh;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
