style(): delete style attribute from body tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Library Search</title>
   </head>
-  <body style="background-color: rgb(23, 23, 23); height: 100vh;">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
