style(): add a library search title and logo and an explanation about the app

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/c9177c3399.js" crossorigin="anonymous"></script>
     
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/book-solid.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
